// Vitest Snapshot v1

exports[`<OTUToolbar /> > should render 1`] = `
<Toolbar>
  <InputSearch
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Button
    active={false}
    id="verified-button"
    onClick={[Function]}
    tip="Filter Unverified"
  >
    <Icon
      name="filter"
    />
  </Button>
  <LinkButton
    color="blue"
    icon="plus-square"
    replace={true}
    tip="Create"
    to={
      {
        "state": {
          "createOTU": true,
        },
      }
    }
  />
</Toolbar>
`;

exports[`<OTUToolbar /> > should render when [verified=true] 1`] = `
<Toolbar>
  <InputSearch
    onChange={[Function]}
    placeholder="Name or abbreviation"
    value="foo"
  />
  <Button
    active={true}
    id="verified-button"
    onClick={[Function]}
    tip="Filter Unverified"
  >
    <Icon
      name="filter"
    />
  </Button>
  <LinkButton
    color="blue"
    icon="plus-square"
    replace={true}
    tip="Create"
    to={
      {
        "state": {
          "createOTU": true,
        },
      }
    }
  />
</Toolbar>
`;
